[gd_scene load_steps=2 format=3 uid="uid://bnv0hy2jwwtgd"]

[ext_resource type="Script" path="res://counter/counter.gd" id="1_lwp5x"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_lwp5x")

[node name="Panel" type="Panel" parent="."]
offset_left = 1.0
offset_top = -1.0
offset_right = 534.0
offset_bottom = 167.0

[node name="Panel_point" type="Panel" parent="Panel"]
z_index = 1
layout_mode = 0
offset_left = 15.0
offset_top = 17.0
offset_right = 223.0
offset_bottom = 148.0

[node name="points" type="Label" parent="Panel/Panel_point"]
z_index = 1
layout_mode = 0
offset_left = 5.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 118.0
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="panel_mult" type="Panel" parent="Panel"]
z_index = 1
layout_mode = 0
offset_left = 310.0
offset_top = 16.0
offset_right = 518.0
offset_bottom = 147.0

[node name="multiplier" type="Label" parent="Panel/panel_mult"]
z_index = 1
layout_mode = 0
offset_left = 10.0
offset_top = 6.0
offset_right = 203.0
offset_bottom = 124.0
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="X" type="Label" parent="."]
z_index = 1
offset_left = 244.0
offset_top = 38.0
offset_right = 284.0
offset_bottom = 116.0
text = "X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="final_points" type="Panel" parent="."]
z_index = 3
offset_left = 2.0
offset_top = -1.0
offset_right = 2.0
offset_bottom = 164.0

[node name="final_point" type="Label" parent="final_points"]
z_index = 3
layout_mode = 0
offset_right = 531.0
offset_bottom = 167.0
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true
